Bug 1884349 - Make sure the pending connections will be closed,  a=pascalc

To make sure the pending connections to be closed soon, we just need to call DontReuse().
After it, the connection will be closed after the last transaction is done.

Original Revision: https://phabricator.services.mozilla.com/D211747

Differential Revision: https://phabricator.services.mozilla.com/D211965